[BUGFIX] missing background image for not assigned backend layout
Resolves: #75739
Releases: master
Reviewed-on: https://review.typo3.org/47747
Tested-by: Mathias Schreiber <mathias.schreiber@wmdb.de>
Tested-by: Susanne Moog <typo3@susannemoog.de>

--- a/typo3/sysext/backend/Resources/Public/Css/backend.css
+++ b/typo3/sysext/backend/Resources/Public/Css/backend.css
@@ -12403,7 +12403,7 @@ iframe {
   background-color: #efc7c7;
 }
 .t3-grid-cell-unassigned {
-  background: url('../../../../images/backgrounds/layout-not-assigned.png') repeat;
+  background: url('../../../../backend/Resources/Public/Images/Backgrounds/layout-not-assigned.png') repeat;
 }
 .t3-page-columns {
   width: 100%;
